Move To Wishlist alignment issue fixed

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/_common.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/_common.scss
@@ -379,6 +379,7 @@ header{
 								color: #92002e;
                                 display: block;
                                 width: 65px;
+                                text-align: left;
 							}
 						}
 				    }
